# Full-text-search

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake.yml
client/: pom.xml
client/src/main/java/: Fts.java  Indexer.java  Main.java  Searcher.java
client/src/main/java/com/fts/: Fts.java  Indexer.java  Main.java  Searcher.java
include/binary/: binary.hpp  binaryTrie.hpp  dictionary.hpp  docs.hpp  entries.hpp  header.hpp
include/fts/: fts.hpp
include/fts-c/: Fts.h
include/index/: index.hpp
include/parser/: parser.hpp
include/search/: search.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/binary/: CMakeLists.txt  binary.cpp  binaryTrie.cpp  dictionary.cpp  docs.cpp  entries.cpp  header.cpp
src/fts/: CMakeLists.txt  fts.cpp
src/fts-c/: CMakeLists.txt  Fts.cpp
src/index/: CMakeLists.txt  index.cpp
src/parser/: CMakeLists.txt  config.json  parser.cpp
src/search/: CMakeLists.txt  search.cpp
tests/: CMakeLists.txt
tests/fts/: CMakeLists.txt
tests/index/: CMakeLists.txt  indextest.cpp
tests/parser/: CMakeLists.txt  parsertest.cpp
tests/search/: CMakeLists.txt  searchtest.cpp
